2022-06-20  G. Branden Robinson <g.branden.robinson@gmail.com>

	* src/roff/groff/groff.cpp: Use single exit path, freeing
	memory allocated for strings.
	(xexit): Add `exit()` wrapper; free allocated memory.
	(main): Use it in all three exit paths.

2022-06-20  G. Branden Robinson <g.branden.robinson@gmail.com>

	* src/roff/groff/groff.cpp: Refactor to be more meticulous with
	memory.  Add globals `saved_path`, `groff_bin_path`, and
	`groff_font` to store pointers into the process environment
	returned by `putenv()`; once used, they need to remain valid for
	the lifetime of the program.
	(xstrdup): Add `strdup()` wrapper: dies if `strdup()` fails.
	(main): Split nested `strsave()` and `xputenv()` (until recently
	`putenv()`) calls.  Free duplicate strings prior to exit.

2022-06-19  G. Branden Robinson <g.branden.robinson@gmail.com>

	* src/roff/groff/groff.cpp (main): Rename temporary variable to
	avoid shadowing one in enclosing scope, which can lead to
	cut-and-paste errors (ask me how I know).

2022-06-19  G. Branden Robinson <g.branden.robinson@gmail.com>

	* src/roff/groff/groff.cpp: Slightly refactor to indirect
	`putenv` calls through an error-checking wrapper.
	(xputenv): Add new function to die if `putenv()` fails.
	(main): Update call sites to use it.

2022-06-19  G. Branden Robinson <g.branden.robinson@gmail.com>

	[groff]: Add information to diagnostic messages.

	* src/roff/groff/groff.cpp (main): Report underlying system
	error if `putenv()` fails.
	(handle_unknown_desc_command): Set globals `current_filename`
	and `current_lineno` from `filename` and `lineno` arguments
	passed to us to we can use the simpler interface of `error()`
	rather than `error_with_file_and_line()`.

2022-06-19  G. Branden Robinson <g.branden.robinson@gmail.com>

	[libgroff]: Update return type of `font::load_desc` function to
	enable more informative diagnostics from callers.

	* src/include/font.h (font::load_desc): Change return type from
	`bool` to `const char` pointer.